public/stylesheets/widgets.css
.netlogo-model {
    display: flex;
    padding: 20px;
    flex-flow: column;
}

.netlogo-header {
    display: flex;
    flex-flow: row;
    align-items: center;
}

.netlogo-widget {
    font-size: 12px;
    font-family: "Lucida Grande", sans-serif;
    box-sizing: border-box;
    background-color: #CCC;
    border-radius: 4px;
    overflow: hidden;
}

.netlogo-command,.netlogo-input {
    user-select: none;
}

.netlogo-command:hover,.netlogo-input:hover {
    cursor:     pointer;
    box-shadow: 0 0 6px 3px rgba(15, 15, 15, .40);
}

.netlogo-tabs {
    margin-top: 20px;
    display: flex;
    flex-flow: row;
    justify-content: space-around;
}

.netlogo-tab {
  border: 3px outset;
  padding: 2px 4px;
  border-radius: 4px;
}

.netlogo-tab input[type=checkbox] {
    display: none;
}

.netlogo-tab:active {
    border: 3px inset;
}
.netlogo-tab.netlogo-active {
    border: 3px inset;
}

.netlogo-model-text {
    display: flex;
    flex-flow: row;
    background-color: white;
}

.netlogo-code-container {
    flex: 1;
    display: flex;
    flex-flow: column;
    background-color: white;
    margin: 10px;
}

.netlogo-export-button {
    flex: 1;
    text-align: center;
    background-color: rgb(240, 240, 240);
    border-color: rgb(238, 238, 238);
}

.netlogo-code {
    flex: 1 1 auto;
    font-family: monospace;
    overflow-x: scroll;
    border: inset;
}
.netlogo-code .CodeMirror {
    height: 500px;
}

.netlogo-info-editor .CodeMirror {
    height: 500px;
}

.netlogo-toggle-edit-mode {
    display: block;
    margin: 10px 0;
}

.netlogo-info {
    flex: 1;
    margin: 10px;
}

.netlogo-command-center {
  flex: 1;
  display: flex;
  flex-direction: column;
  height: 175px;
  padding: 5px;
}

.netlogo-command-center-editor {
  height: 1.25em;
  flex-grow: 1;
}

.netlogo-command-center-editor .CodeMirror {
  border: 1px solid #eee;
  height: auto;
}

.netlogo-output-widget {
  display: flex;
  padding: 5px;
}

.netlogo-output-area {
  flex-grow: 1;
  flex-direction: column;
  background-color: white;
  margin: 0px;
  overflow: auto;
}

.netlogo-command-center-input {
  display: flex;
  flex-shrink: 0;
}

.netlogo-speed-slider {
    background-color: transparent;
    border: none;
    margin-right: 10px;
    flex: auto;
    display: flex;
    align-items: baseline;
}

.netlogo-widget input[type=range]::-ms-tooltip {
  display: none;
}

.netlogo-speed-slider input {
    border: none;
    flex: auto;
}

.netlogo-model input[type=range] {
    cursor: pointer;
    cursor: grab;
}

.netlogo-model input[type=range]:active {
    cursor: pointer;
    cursor: grabbing;
}

.netlogo-tick-counter {
    font-size: 13px;
    margin: 3px;
    border: none;
    height: 15px;
}

.netlogo-button {
    border: inherit;
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 0px;
}

.netlogo-button.clear-button {
    padding: 5px;
}

.netlogo-button > span {
    /* For some reason, Safari doesn't like justify-content in buttons,
       we have to resort to putting a span in the button that can then be
       centered.
       BCH 11/14/2014 */
    margin: auto;
}

.netlogo-button:active {
    background-color: gray;
    color: white;
}

.netlogo-forever-button.netlogo-active {
    background-color: gray;
    color: white;
}

.netlogo-text-box {
    background-color: white;
    border: none;
    margin: 0;
    white-space: pre-wrap;
}

.netlogo-switcher {
    display: flex;
    align-items: center;
}

.netlogo-slider {
    padding-left: 3px;
    padding-right: 3px;
}

.netlogo-slider:hover {
    cursor: default;
}

.netlogo-slider input[type=range] {
    padding: 0px;
    width: 100%;
    margin: 0px;
    height: 22px;
    margin-bottom: -4px;
    margin-top: -3px;
    background-color: transparent;
}

.netlogo-slider-label {
    display: flex;
    justify-content: space-between;
}

.netlogo-slider-label .netlogo-label {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    min-width: 0;
    flex: 1 1 auto;
}

.netlogo-slider-label .netlogo-slider-value {
    flex: 0 0 auto;
}

.netlogo-slider-label input[type=number] {
    margin: 0px;
    border: 1px;
    padding: 0px;
}


.netlogo-monitor {
    padding: 2px 4px;
    display: flex;
    flex-flow: column;
    justify-content: space-around;
}

.netlogo-monitor > .netlogo-value {
    background-color: white;
    padding: 2px 2px;
}

.netlogo-value {
    overflow: hidden;
}

.netlogo-input-box {
    padding: 2px 4px;
    display: flex;
    flex-flow: column;
    justify-content: space-around;
}

.netlogo-chooser {
    padding: 2px 4px;
    display: flex;
    flex-flow: column;
    justify-content: space-around;
}

.netlogo-plot {
    box-sizing: content-box; /* otherwise border gets cut off -- BCH 11/9/2014 */
    border: 1px solid black;
}

.netlogo-forever-button > input {
    display: none;
}

.netlogo-subheader {
    display: flex;
    flex-flow: column;
}

